syntax = "proto3";
package image_encoding;

service ImageEncoder {
  rpc ImageEncode (EncodedImageRequest) returns (EncodedImageResponse);
}

message EncodedImageRequest {
  bytes image_data = 1;
  string file_name = 2;
  string user_name = 3;
  string client_server_socket = 4;
}

message EncodedImageResponse {
  bytes image_data = 1;
}